--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Node.js 依賴
 frontend/node_modules/
 frontend/dist/
-frontend/package-lock.json
+# frontend/package-lock.json  ← 應該要提交以確保建置一致性
 
 # 編輯器
 .vscode/
